Update instructions for running.